# sockets

./: .gitignore  CMakeLists.txt
include/: INetConnection.hpp  NetConnection.hpp  NetServer.hpp  NetUtils.hpp
src/: main.cpp
src/examples/: CMakeLists.txt
src/examples/echo/: main.cpp
src/examples/echo_server/: CMakeLists.txt  main.cpp
src/win/: NetConnectionWin32.cpp  NetConnectionWin32.hpp  NetServerWin32.cpp  NetServerWin32.hpp  NetUtilsWin32.cpp
test/: CMakeLists.txt
test/src/: SocketsTests.cpp
